# kube-workload-restarter

./: .gitignore  Dockerfile  README.md  artifacthub-repo.yml  go.mod  go.sum  index.yaml  pyproject.toml  requirements.txt  setup.py  version.sh
.github/workflows/: main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
k8s-workload-restarter/: __init__.py  log.py  main.py  restarter.py
k8s-workload-restarter/restarter/: __init__.py
k8s-workload-restarter/utils/: __init__.py
src/: main.go  main.py  restarter.py
