[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-workload-restarter"
version = "0.0.7"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters