[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-workload-restarter"
version = "0.0.11"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false